--- a/index.html
+++ b/index.html
@@ -1,44 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
-  <link rel="stylesheet" href="styles.css"/>
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.linkedin.com/in/christiansbustos/">Christian Bustos</a>.
-  </div>
-</body>
+    <title>Frontend Mentor | Results summary component</title>
+    <link rel="stylesheet" href="styles.css" />
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  </head>
+  <body>
+    <div class="card">
+      <div class="card-container">
+        <section class="result">
+          <h3 class="title">Your Result</h3>
+          <div class="circle">
+            <h1>76</h1>
+            <p>of 100</p>
+          </div>
+          <b>Great</b>
+          <p class="info">
+            Your scored higher than 65% of the people who have taken the test
+          </p>
+        </section>
+        <section class="summary">
+          <h3 class="title">Summary</h3>
+          <div class="rows">
+            <div class="row">
+              <div class="badge">
+                <img src="./assets/images/icon-reaction.svg" alt="icon" /><b
+                  >Reaction</b
+                >
+              </div>
+              <p><b>80</b> / 100</p>
+            </div>
+            <div class="row">
+              <div class="badge">
+                <img src="./assets/images/icon-memory.svg" alt="icon" /><b
+                  >Memory</b
+                >
+              </div>
+              <p><b>92</b> / 100</p>
+            </div>
+            <div class="row">
+              <div class="badge">
+                <img src="./assets/images/icon-verbal.svg" alt="icon" /><b
+                  >Verbal</b
+                >
+              </div>
+              <p><b>61</b> / 100</p>
+            </div>
+            <div class="row">
+              <div class="badge">
+                <img src="./assets/images/icon-visual.svg" alt="icon" /><b
+                  >Visual</b
+                >
+              </div>
+              <p><b>72</b> / 100</p>
+            </div>
+          </div>
+          <button class="btn">Continue</button>
+        </section>
+      </div>
+    </div>
+  </body>
 </html>
